clusters/building-blocks/other/apps/unifi/app/unifi-deploy.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/deployment-apps-v1.json
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unifi
  namespace: default
  labels:
    app.kubernetes.io/name: unifi
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: unifi
  template:
    metadata:
      labels:
        app.kubernetes.io/name: unifi
    spec:
      automountServiceAccountToken: false
      containers:
        - name: unifi
          image: ghcr.io/lemker/unifi-os-server:latest
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/bash
                  - -c
                  - echo $HOST_IP host.docker.internal >> /etc/hosts
          securityContext:
            privileged: true
          ports:
            - name: web
              containerPort: 443
              protocol: TCP
            - name: device-comm
              containerPort: 8080
              protocol: TCP
            - name: stun
              containerPort: 3478
              protocol: UDP
            - name: discovery
              containerPort: 10003
              protocol: UDP
          livenessProbe:
            httpGet:
              path: /api/ping
              port: 443
              scheme: HTTPS
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
          volumeMounts:
            - name: cgroup
              mountPath: /sys/fs/cgroup
            - name: data
              mountPath: /persistent
              subPath: persistent
            - name: data
              mountPath: /var/log
              subPath: log
            - name: data
              mountPath: /data
              subPath: data
            - name: data
              mountPath: /srv
              subPath: srv
            - name: data
              mountPath: /var/lib/unifi
              subPath: unifi
            - name: data
              mountPath: /var/lib/mongodb
              subPath: mongodb
            - name: data
              mountPath: /etc/rabbitmq/ssl
              subPath: rabbitmq
      volumes:
        - name: cgroup
          hostPath:
            path: /sys/fs/cgroup
            type: Directory
        - name: data
          persistentVolumeClaim:
            claimName: unifi-pvc
