clusters/building-blocks/other/apps/unifi/app/unifi-svc.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/v1.31.0-standalone-strict/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: unifi
  namespace: default
  labels:
    app.kubernetes.io/name: unifi
spec:
  type: ExternalName
  externalName: "192.168.178.155"
  ports:
    - name: web
      port: 11443
      protocol: TCP
